chandeliers-lus/tests/warn/dead_code/exported.stderr
error: method `step` is never used
 --> tests/warn/dead_code/exported.rs:6:14
  |
6 |         node foo() returns ();
  |              ^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/warn/dead_code/exported.rs:1:9
  |
1 | #![deny(dead_code)]
  |         ^^^^^^^^^

error: constant `FOO__lus_0_global` is never used
  --> tests/warn/dead_code/exported.rs:10:15
   |
10 |         const FOO: int = 0;
   |               ^^^

error: constant `FOO` is never used
  --> tests/warn/dead_code/exported.rs:10:15
   |
10 |         const FOO: int = 0;
   |               ^^^
